# kodilla-automated-tests

./: .gitignore  palindrome.py  prime_factors.py  pyproject.toml  requirements.txt  setup.cfg  test_palindrome.py  test_prime_factors.py  tic_tac_toe.py  tox.ini
.github/workflows/: tom.yml
src/prime_factors/: prime_factors.py
src/quizy/: __init__.py  app.py  app_data.py  bp_error.py  bp_quizy.py  bp_ranking.py  data.py  data_models.py  questions.py
src/quizy/templates/: index.html  quizy_choose.html  quizy_count_me_in.html  quizy_take.html  ranking.html  rankings.html
src/quizy/templates/error/: opentdb.html
src/quizy/templates/quizy/: choose.html  count_me_in.html  take.html
src/quizy/templates/ranking/: ranking.html
src/romans/: romans.py
tests/: conftest.py
tests/fixtures/: app.py  questions_easy.py  questions_hard.py  questions_medium.py
tests/palindrome/: test_palindrome.py
tests/prime_factors/: test_prime_factors.py
tests/quizy/: test_app.py  test_bp_error.py  test_bp_quizy.py  test_bp_ranking.py  test_data.py  test_questions.py
tests/romans/: test_romans.py
