[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --cov -vv"
testpaths = [
  "tests",
  "src",
]

[tool.coverage.run]
include = ["src"]
source = ["src"]
omit = [
  "tests",
  "src/kodilla/__init__.py",
]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["def __repr__"]

[tool.coverage.html]
directory = "docs/coverage"
