[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --cov -vv"
testpaths = [
  "tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "def __repr__",
  "pragma: no cover"
]

[tool.coverage.html]
directory = "docs/coverage"
