[metadata]
name = kodilla-automated-tests
version = 0.0.2
url = https://github.com/gstopa/kodilla-automated-tests
platforms =
    Unix
    Linux
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Operating System :: Unix
    Operating System :: Linux
    Topic :: Education :: Testing

[options]
python_requires = >= 3.8
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
