[metadata]
name = quizy
version = 1.0.0
url = https://github.com/gstopa/kodilla-automated-tests
platforms =
    Unix
    Linux
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: Unix
    Operating System :: Linux
    Topic :: Education :: Testing

[options]
python_requires = >= 3.7
install_requires =
    bcrypt==3.2.0
    blinker==1.4
    certifi==2021.10.8
    cffi==1.15.0
    charset-normalizer==2.0.12
    click==8.1.2
    cryptography==36.0.2
    dnspython==2.2.1
    email-validator==1.1.3
    Flask==2.1.1
    Flask-Login==0.6.0
    Flask-Mail==0.9.1
    Flask-SQLAlchemy==2.5.1
    Flask-User==1.0.2.2
    Flask-WTF==1.0.1
    greenlet==1.1.2
    idna==3.3
    importlib-metadata==4.11.3
    itsdangerous==2.1.2
    Jinja2==3.1.1
    MarkupSafe==2.1.1
    passlib==1.7.4
    pycparser==2.21
    requests==2.27.1
    responses==0.20.0
    setuptools==62.1.0
    six==1.16.0
    SQLAlchemy==1.4.35
    urllib3==1.26.9
    Werkzeug==2.1.1
    wheel==0.37.1
    WTForms==3.0.1
    zipp==3.8.0
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
